Issue 1481: Update API Spec, Region required for schematics workspace (#1556)
* update spec, workspace region required

* update CRAIG version

* save proj bug + invalidText

* fields disabled after workspace create

* fix schematics endpoint

* fix all schematics endpoints

* update spec for /schematics/tar
